test/src/e2e_vm_tests/test_programs/should_pass/stdlib/assert_eq_u256_revert/src/main.sw
script;

use std::u256::*;

#[allow(deprecated)]
fn main() {
    let five = U256::from((0, 0, 0, 5));
    let two = U256::from((0, 0, 0, 2));
    assert_eq(five, two);
}