test/src/e2e_vm_tests/test_programs/should_fail/better_type_error_message/src/main.sw
script;

use std::identity::*;

fn bogus() {
    let value = B512 {
        bytes: [
            0x0101010101010101010101010101010101010101010101010101010101010101,
            0x0101010101010101010101010101010101010101010101010101010101010101,
        ],
    };
}

fn main() {}
